address Safari scale blurry issue by rendering large svg by default and scale down

--- a/assets/css/circle-dot-cursor.css
+++ b/assets/css/circle-dot-cursor.css
@@ -13,8 +13,8 @@
   vertical-align: baseline;
 }
 .circle-dot-cursor__ball--big {
-  width: 26px;
-  height: 26px;
+  width: 208px;
+  height: 208px;
 }
 .circle-dot-cursor__ball--small {
   width: 16px;
